--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -6,11 +6,12 @@
 
     <body>
         <h1>{{ category_name }}</h1>
+        <h2>Likes:  {{ category.likes }}</h2>
         {% if category %}
             {% if pages %}
             <ul>
                 {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                <li><a href="{{ page.url }}">{{ page.title }}</a>- {{page.views}} views</li>
                 {% endfor %}
             </ul>
             {% else %}
@@ -18,6 +19,9 @@
             {% endif %}
         {% else %}
             The specified category {{ category_name }} does not exist!
+        {% endif %}
+        {% if category %}
+            <a href="/rango/{{ category_name_url }}/add_page">Add a Page</a>
         {% endif %}
     </body>
 </html>
