--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -31,6 +31,7 @@
         {% endif %}
         </ul>
         <a href="/rango/about/">About</a>
+        <a href="/rango/add_category">Add a New Category</a>
     </body>
 
 </html>
