--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,6 +10,11 @@
         <link type="text/css" rel="stylesheet" href='{% static "stylesheet.css" %}'/>
     <body>
         <h1>Rango says...hello world!</h1>
+        {% if user.is_authenticated %}
+        <h3>You are logged in as {{ user.username }}</h3>
+        {% else %}
+        <h3>You are not logged in</h3>
+        {% endif %}
         <h2 id="top">Top 5 Categories</h2>
         <div class="top-five">
         {% if categories %}
@@ -35,9 +40,16 @@
             <strong>There are no pages present.</strong>
         {% endif %}
         </div>
+        <br/>
+        {% if user.is_authenticated %}
+        <a href="/rango/restricted/">Restricted Page</a><br />
+        <a href="{% url "logout" %}">Logout<a><br />
+        {% else %}
+        <a href="/rango/register/">Register Here</a><br/>
+        <a href="/rango/login/">Login</a><br/>
+        {% endif %}
+        <a href="/rango/about/">About</a><br />
+        <a href="/rango/add_category">Add a New Category</a><br/>
 
-        <a href="/rango/about/">About</a>
-        <a href="/rango/add_category">Add a New Category</a>
     </body>
-
 </html>
