--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load static %}
+{% block title %}About{% endblock %}
 
-{% load static %} <!-- New line -->
-
-<html>
-
-    <head>
-        <title>About Rango</title>
-    </head>
-
-    <body>
-        <h1>Rango says...</h1>
-        This is the about page <strong>{{ aboutmessage }}</strong><br />
-        <a href="/rango/">Back to home page</a><br />
-        <img src="{% static "rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
-    </body>
-
-</html>
+{% block body_block %}
+    <h1>Rango says...</h1>
+    This is the about page <strong>{{ aboutmessage }}</strong><br />
+    <a href="{% url "index" %}">Back to home page</a><br />
+    <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
+{% endblock %}
