--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango - Add a Category</title>
-</head>
-<body>
+{% extends 'rango/base.html' %}
+{% block title %}Add a new category{% endblock %}
+
+{% block body_block %}
     <h1>Add a Category</h1>
 
-    <form id="category_form" method="post" action="/rango/add_category/">
+    <form id="category_form" method="post" action="{% url "add_category" %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
-            {{ hidden }}
+        {{ hidden }}
         {% endfor %}
 
         {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}
-            {{ field }}
+        {{ field.errors }}
+        {{ field.help_text }}
+        {{ field }}
         {% endfor %}
 
-        <input type="submit" name="submit" value="Create Category"/>
+        <input type="submit" name="submit" value="Create Category" />
 
     </form>
-</body>
-</html>
+{% endblock %}
