--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango - Add a Page</title>
-</head>
-<body>
+{% extends 'rango/base.html' %}
+{% block title %}Add page to {{ category_name }} category{% endblock %}
+
+{% block body_block %}
     <h1>Add a Page</h1>
 
-    <form id="page_form" method="post" action="/rango/{{ category_name_url }}/add_page/">
+    <form id="page_form" method="post" action="{% url 'add_page' category_name_url %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
@@ -17,9 +15,6 @@
             {{ field.help_text }}
             {{ field }}
         {% endfor %}
-
-        <input type="submit" name="submit" value="Create Page"/>
-
+        <input type="submit" name="submit" value="Create Page" />
     </form>
-</body>
-</html>
+{% endblock %}
