--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,9 +1,34 @@
+<!DOCTYPE html>
 <html>
-<head><title></title></head>
+    <head>
+        {% load static %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src='{% static "main.js" %}'></script>
+        <link type="text/css" rel="stylesheet" href='{% static "css/stylesheet.css" %}' />
+        <title>Rango - {% block title %}Default Title{% endblock %}</title>
+    </head>
 
-<body>
+    <body>
+        <div>
+            {% block body_block %}
 
-{{ content }}
+            {% endblock %}
+        </div>
+        <hr />
+        <div>
+            <ul>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url "restricted" %}">Restricted Page</a></li>
+                    <li><a href="{% url "logout" %}">Logout</a></li>
+                    <li><a href="{% url "add_category" %}">Add a New Category</a></li>
+                {% else %}
+                    <li><a href="{% url "register" %}">Register Here</a></li>
+                    <li><a href="{% url "login" %}">Login</a></li>
+                {% endif %}
+                    <li><a href="{% url "about" %}">About</a></li>
+                    <li><a href="{% url "index" %}">Home</a></li>
+            </ul>
+        </div>
 
-</body>
+    </body>
 </html>
