--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% block title %}{{ category_name }}{% endblock %}
 
-    <body>
-        <h1>{{ category_name }}</h1>
-        <h2>Likes:  {{ category.likes }}</h2>
-        {% if category %}
-            {% if pages %}
+{% block body_block %}
+    <h1>{{ category_name }}</h1>
+    <h2>Likes:  {{ category.likes }}</h2>
+    {% if category %}
+        {% if pages %}
             <ul>
                 {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a>- {{page.views}} views</li>
+                    <li><a href="{{ page.url }}">{{ page.title }}</a>- {{page.views}} views</li>
                 {% endfor %}
             </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
         {% else %}
-            The specified category {{ category_name }} does not exist!
+            <strong>No pages currently in category.</strong>
         {% endif %}
-        {% if category %}
-            <a href="/rango/{{ category_name_url }}/add_page">Add a Page</a>
-        {% endif %}
-    </body>
-</html>
+    {% else %}
+        The specified category {{ category_name }} does not exist!
+    {% endif %}
+    {% if user.is_authenticated %}
+        <br />
+        <a href="{% url 'add_page' category_name_url %}">Add a Page</a>
+    {% endif %}
+{% endblock %}
