--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% block title %}Homepage{% endblock %}
 
-{% load static %} <!-- New line -->
-
-<html>
-
-    <head>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script type="text/javascript" src='{% static "main.js" %}'></script>
-        <link type="text/css" rel="stylesheet" href='{% static "stylesheet.css" %}'/>
-    <body>
+{% block body_block %}
         <h1>Rango says...hello world!</h1>
         {% if user.is_authenticated %}
-        <h3>You are logged in as {{ user.username }}</h3>
+            <h3>You are logged in as {{ user.username }}</h3>
         {% else %}
-        <h3>You are not logged in</h3>
+            <h3>You are not logged in</h3>
         {% endif %}
         <h2 id="top">Top 5 Categories</h2>
         <div class="top-five">
         {% if categories %}
-        <ul>
-            {% for category in categories %}
-            <li><a href="/rango/category/{{ category.url }}">{{ category.name }}</a></li>
-            {% endfor %}
-        </ul>
+            <ul>
+                {% for category in categories %}
+                    <li><a href="{% url "category" category.url %}">{{ category.name }}</a></li>
+                {% endfor %}
+            </ul>
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
@@ -30,26 +23,14 @@
 
         <h2 id="top">Top 5 Pages</h2>
         <div class="top-five">
-        {% if pages %}
-        <ul>
-            {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
-        {% endif %}
+            {% if pages %}
+            <ul>
+                {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
         </div>
-        <br/>
-        {% if user.is_authenticated %}
-        <a href="/rango/restricted/">Restricted Page</a><br />
-        <a href="{% url "logout" %}">Logout<a><br />
-        {% else %}
-        <a href="/rango/register/">Register Here</a><br/>
-        <a href="/rango/login/">Login</a><br/>
-        {% endif %}
-        <a href="/rango/about/">About</a><br />
-        <a href="/rango/add_category">Add a New Category</a><br/>
-
-    </body>
-</html>
+{% endblock %}
