--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -4,7 +4,7 @@
         {% load static %}
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src='{% static "main.js" %}'></script>
-        <link type="text/css" rel="stylesheet" href='{% static "css/stylesheet.css" %}' />
+        <link type="text/css" rel="stylesheet" href='{% static "stylesheet.css" %}' />
         <title>Rango - {% block title %}Default Title{% endblock %}</title>
     </head>
 
