--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,23 +1,21 @@
 body {
-    font-family:'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-a:hover {
-    font-weight: bold;
-}
+  font-family: 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
 
 a {
-    color: #2E78E6;
-}
+  color: #2E78E6; }
+  a:hover {
+    font-weight: bold; }
 
 div.top-five {
-    width: 500px;
-    background: #bdbdbd;
-    display: none;
-    border-radius: 5px;
-    padding: 10px;
-}
+  width: 500px;
+  background: #bdbdbd;
+  display: none;
+  border-radius: 5px;
+  padding: 10px; }
 
 h2#top {
-    cursor: pointer;
-}
+  cursor: pointer; }
+
+p {
+  padding: 10px; }
+
